[project]
name = "bulletproof-rag"
version = "0.1.0"
description = "A self-correcting, observable, continuously-evaluated RAG system."
requires-python = ">=3.12"
dependencies = [
    "shared",
    "deeprag",
    "agentguard",
    "eval-harness",
    "dashboard",
]

[tool.uv.sources]
shared = { workspace = true }
deeprag = { workspace = true }
agentguard = { workspace = true }
eval-harness = { workspace = true }
dashboard = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as requiring external services like ChromaDB"
]